# labsoft2-filmes

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: backend.yaml
app/: pubspec.yaml
app/android/app/: build.gradle  google-services.json
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: landing_page.dart  main.dart
app/lib/components/: app_scaffold.dart  form_button.dart  loading_page.dart  navigation_drawer.dart  social_login.dart  something_went_wrong_page.dart
app/lib/models/: movie.dart  movie_repository.dart  movie_user.dart  streaming_service.dart  user_preferences_service.dart  user_repository.dart
app/lib/services/: backend_service.dart
app/lib/viewmodels/: auth_viewmodel.dart  linked_accounts_viewmodel.dart  navigator_viewmodel.dart  screen_viewmodel.dart
app/lib/widgets/: app_scaffold.dart  ink_wrapper.dart  (+5 more)
backend_filmes/: Dockerfile  database.json  db.json  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
backend_filmes/backend_filmes/: asgi.py  settings.py  settings.py.sample  urls.py  wsgi.py
backend_filmes/filmes/: admin.py  models.py  serializers.py  urls.py  views.py
backend_filmes/filmes/migrations/: 0001_initial.py  0002_auto_20210621_1459.py  0002_movie_userrating.py  0003_auto_20210621_1600.py  0004_alter_user_id.py  0005_recommendationhistory.py  0006_alter_user_id.py  0007_remove_user_age.py  0008_alter_userrating_review.py
front/: .gitignore  App.js  package-lock.json
front/pages/: landing-page.jsx  login.jsx  sign-up.jsx
infra/terraform/: cloud_sql.tf  gke.tf  main.tf
(+38 files in other folders)
